# polestar-home-assistant

./: .gitignore  LICENSE  hacs.json  pyproject.toml
.github/workflows/: ci.yml
custom_components/polestar_soc/: __init__.py  binary_sensor.py  cep.py  config_flow.py  const.py  coordinator.py  lock.py  manifest.json  number.py  pccs.py  proto.py  sensor.py  strings.json  switch.py  time.py
custom_components/polestar_soc/translations/: en.json
tests/: conftest.py  test_binary_sensor.py  test_cep.py  test_config_flow.py  test_const.py  test_coordinator.py  test_lock.py  test_pccs.py  test_sensor.py  test_switch.py
