[project]
name = "polestar-soc"
version = "1.0.0"
description = "Polestar State of Charge – Home Assistant custom integration"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.coverage.run]
source = ["custom_components/polestar_soc"]

[tool.coverage.report]
show_missing = true
fail_under = 30
